; ModuleID = '/home/carl/AnghaBench/mpv/sub/extr_dec_sub.c_sub_select.c'
source_filename = "/home/carl/AnghaBench/mpv/sub/extr_dec_sub.c_sub_select.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dec_sub = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i32 (%struct.TYPE_4__*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sub_select(%struct.dec_sub* %0, i32 %1) #0 {
  %3 = alloca %struct.dec_sub*, align 8
  %4 = alloca i32, align 4
  store %struct.dec_sub* %0, %struct.dec_sub** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.dec_sub*, %struct.dec_sub** %3, align 8
  %6 = getelementptr inbounds %struct.dec_sub, %struct.dec_sub* %5, i32 0, i32 0
  %7 = call i32 @pthread_mutex_lock(i32* %6)
  %8 = load %struct.dec_sub*, %struct.dec_sub** %3, align 8
  %9 = getelementptr inbounds %struct.dec_sub, %struct.dec_sub* %8, i32 0, i32 1
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32 (%struct.TYPE_4__*, i32)*, i32 (%struct.TYPE_4__*, i32)** %13, align 8
  %15 = icmp ne i32 (%struct.TYPE_4__*, i32)* %14, null
  br i1 %15, label %16, label %29

16:                                               ; preds = %2
  %17 = load %struct.dec_sub*, %struct.dec_sub** %3, align 8
  %18 = getelementptr inbounds %struct.dec_sub, %struct.dec_sub* %17, i32 0, i32 1
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32 (%struct.TYPE_4__*, i32)*, i32 (%struct.TYPE_4__*, i32)** %22, align 8
  %24 = load %struct.dec_sub*, %struct.dec_sub** %3, align 8
  %25 = getelementptr inbounds %struct.dec_sub, %struct.dec_sub* %24, i32 0, i32 1
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %25, align 8
  %27 = load i32, i32* %4, align 4
  %28 = call i32 %23(%struct.TYPE_4__* %26, i32 %27)
  br label %29

29:                                               ; preds = %16, %2
  %30 = load %struct.dec_sub*, %struct.dec_sub** %3, align 8
  %31 = getelementptr inbounds %struct.dec_sub, %struct.dec_sub* %30, i32 0, i32 0
  %32 = call i32 @pthread_mutex_unlock(i32* %31)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
